--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="sort_prompt">Sort</string>
     <string name="refresh">Fetch mountains</string>
     <string name="drop_db">Drop database</string>
+    <string name="title_activity_solarsystem_details">Solar System Details</string>
 </resources>
